changed icons in the contact block

--- a/src/index.html
+++ b/src/index.html
@@ -178,8 +178,8 @@
 
     <section class="resume">
         <div class="container">
-            <h2 class="title title_fz16 resume__title">Опыт</h2>
-            <div class="title title_fz36 resume__subtitle">Чем я буду полезна</div>
+            <h2 class="title title_fz16 title__section-title">Опыт</h2>
+            <div class="title title_fz36 title__section-subtitle">Чем я буду полезна</div>
             <div class="divider"></div>
             <div class="resume__wrapper">
                 <div class="resume__column">
@@ -256,6 +256,184 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="skills">
+        <div class="container">
+            <h2 class="title title_fz16 title__section-title">Навыки</h2>
+            <div class="title title_fz36 title__section-subtitle">Что я использую в работе</div>
+            <div class="divider"></div>
+
+            <div class="skills__items">
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/html5.svg" alt="html5">
+                    </div>
+                    <h3 class="title title_fz14">HTML5</h3>
+                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более
+                        SEO-оптимизированную структуру вашего продукта</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/html5.svg" alt="html5">
+                    </div>
+                    <h3 class="title title_fz14">HTML5</h3>
+                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более
+                        SEO-оптимизированную структуру вашего продукта</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/html5.svg" alt="html5">
+                    </div>
+                    <h3 class="title title_fz14">HTML5</h3>
+                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более
+                        SEO-оптимизированную структуру вашего продукта</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/html5.svg" alt="html5">
+                    </div>
+                    <h3 class="title title_fz14">HTML5</h3>
+                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более
+                        SEO-оптимизированную структуру вашего продукта</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/html5.svg" alt="html5">
+                    </div>
+                    <h3 class="title title_fz14">HTML5</h3>
+                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более
+                        SEO-оптимизированную структуру вашего продукта</p>
+                </div>
+            </div>
+
+            <div class="skills__ratings">
+                <div class="skills__ratings-item">
+                    <div class="title title_fz14 skills__ratings-title">Создание сайтов</div>
+                    <div class="skills__ratings-counter">100%</div>
+                    <div class="skills__ratings-line">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="skills__ratings-item">
+                    <div class="title title_fz14 skills__ratings-title">Создание приложений</div>
+                    <div class="skills__ratings-counter">85%</div>
+                    <div class="skills__ratings-line">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="skills__ratings-item">
+                    <div class="title title_fz14 skills__ratings-title">Работа с данными</div>
+                    <div class="skills__ratings-counter">90%</div>
+                    <div class="skills__ratings-line">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="skills__ratings-item">
+                    <div class="title title_fz14 skills__ratings-title">Креативность</div>
+                    <div class="skills__ratings-counter">75%</div>
+                    <div class="skills__ratings-line">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="skills__ratings-item">
+                    <div class="title title_fz14 skills__ratings-title">Создание дизайна</div>
+                    <div class="skills__ratings-counter">90%</div>
+                    <div class="skills__ratings-line">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="skills__ratings-item">
+                    <div class="title title_fz14 skills__ratings-title">Soft skills</div>
+                    <div class="skills__ratings-counter">95%</div>
+                    <div class="skills__ratings-line">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <h2 class="title title_fz16 title__section-title">Портфолио</h2>
+            <div class="title title_fz36 title__section-subtitle">Мои работы</div>
+            <div class="divider"></div>
+
+            <div class="portfolio__wrapper">
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/uber.jpg" alt="uber">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/pulse.jpg" alt="puls">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/bread.jpg" alt="test">
+                </a>
+                <a href="#" class="portfolio__item vertical">
+                    <img src="img/works/plans.jpg" alt="test">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/ipad.jpg" alt="test">
+                </a>
+                <a href="#" class="portfolio__item horizonal">
+                    <img src="img/works/mac.jpg" alt="test">
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__wrapper">
+                <div class="contacts__photo">
+                    <img src="img/main_photo.jpg" alt="photo">
+                </div>
+                <div class="contacts__descr">
+                    <h2 class="title title_fz16 contacts__title">Контакты</h2>
+                    <div class="title title_fz36 contacts__subtitle">Свяжитесь со мной</div>
+                    <div class="divider"></div>
+
+                    <div class="title title_fz14 contacts__text">
+                        Любым удобным для вас способом:
+                    </div>
+                    <div class="contacts__social">
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/facebook_straight.svg" alt="facebook">
+                        </a>
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/telegram.svg" alt="telegram">
+                        </a>
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/instagram_straight.svg" alt="instagram">
+                        </a>
+                    </div>
+                    <div class="title title_fz14 contacts__text">
+                        Или оставьте ваши данные:
+                    </div>
+
+                    <form action="#" class="contacts__form">
+                        <div class="contacts__input">
+                            <input id="name" type="text" name="name">
+                            <label for="name">Ваше имя</label>
+                        </div>
+                        <div class="contacts__input">
+                            <input id="email" type="email" name="email">
+                            <label for="email">Ваша почта</label>
+                        </div>
+
+                        <div class="contacts__textarea">
+                            <textarea name="text" id="text"></textarea>
+                            <label for="text">Ваше сообщение</label>
+                        </div>
+                        <div>
+                            <button class="contacts__btn btn btn__submit">Отправить сообщение</button>
+                        </div>
+                    </form>
+                </div>
+
             </div>
         </div>
     </section>
