--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,11 @@
 <meta name="theme-color" content="#ffffff">
 
 <link rel="stylesheet" href="css/style.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
+
     <aside class="sidepanel">
         <a href="#" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="telegram"></a>
         <a href="#" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
@@ -96,27 +98,39 @@
     </div>
 
     <section class="promo">
-        <div class="hamburger">
-            <span></span>
-            <span class="long"></span>
-            <span></span>
-        </div>
-        <div class="container">
-            <div class="title title_fz16 promo__subtitle">Меня зовут Анастасия</div>
-            <h1 class="title title_fz48 promo__title">Я frontend разработчик</h1>
-            <div class="promo__btns">
-                <a href="#" class="promo__link btn">Портфолио</a>
-                <a href="#" class="promo__link">Про меня</a>
+
+        <div id="bg-canvas">
+            <canvas id="canvas"></canvas>
+            <div class="hamburger">
+                <span></span>
+                <span class="long"></span>
+                <span></span>
             </div>
-        </div>
+
+            <div class="container">
+                <div id="text-canvas">
+                    <div class="title title_fz20 promo__subtitle">Меня зовут Анастасия</div>
+                    <h1 class="title title_fz50 promo__title">Я frontend разработчик</h1>
+                    <div class="promo__btns">
+                        <a href="#" class="promo__link btn">Портфолио</a>
+                        <a href="#" class="promo__link">Про меня</a>
+                    </div>
+                </div>
+            </div>
+
     </section>
+
 
     <section class="about">
         <div class="container">
+
             <div class="about__wrapper">
+
                 <div class="about__photo">
-                    <img src="img/main_photo.jpg" alt="photo">
+                    <img src="img/mn.jpg" alt="photo">
+
                 </div>
+
                 <div class="about__descr">
                     <h2 class="title title_fz16 about__title">Про меня</h2>
                     <div class="title title_fz36 about__subtitle">Меня зовут Анастасия</div>
@@ -267,46 +281,113 @@
             <div class="divider"></div>
 
             <div class="skills__items">
+
                 <div class="skills__item">
-                    <div class="skills__item-img">
-                        <img src="icons/skills/html5.svg" alt="html5">
+                    <div class="skills__item__wrapper">
+                        <div class="skills__item__content skills__item__content_active">
+                            <div class="skills__item-img">
+                                <img src="icons/skills/html5.svg" alt="html5" class="item-img">
+                            </div>
+                        </div>
+                        <div class="skills__item__descr">
+                            <h3 class="title title_fz14">HTML5</h3>
+                            <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне
+                                создавать более
+                                SEO-оптимизированную структуру вашего продукта</p>
+                        </div>
                     </div>
-                    <h3 class="title title_fz14">HTML5</h3>
-                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более
-                        SEO-оптимизированную структуру вашего продукта</p>
                 </div>
+
                 <div class="skills__item">
-                    <div class="skills__item-img">
-                        <img src="icons/skills/html5.svg" alt="html5">
+                    <div class="skills__item__wrapper">
+                        <div class="skills__item__content skills__item__content_active">
+                            <div class="skills__item-img">
+                                <img src="icons/skills/css3.svg" alt="css3" class="item-img">
+                            </div>
+                        </div>
+                        <div class="skills__item__descr">
+                            <h3 class="title title_fz14">CSS3</h3>
+                            <p>Этот язык стилей позволяет создавать абсолютно любой внешний вид вашего сайта или
+                                приложения. Все ограничивается только вашей фантазией!</p>
+                        </div>
                     </div>
-                    <h3 class="title title_fz14">HTML5</h3>
-                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более
-                        SEO-оптимизированную структуру вашего продукта</p>
                 </div>
+
                 <div class="skills__item">
-                    <div class="skills__item-img">
-                        <img src="icons/skills/html5.svg" alt="html5">
+                    <div class="skills__item__wrapper">
+                        <div class="skills__item__content skills__item__content_active">
+                            <div class="skills__item-img">
+                                <img src="icons/skills/sass.svg" alt="sass" class="item-img">
+                            </div>
+                        </div>
+                        <div class="skills__item__descr">
+                            <h3 class="title title_fz14">Sass/Scss</h3>
+                            <p>Препроцессор CSS придающий мощь и элегантность этому простому языку. Sass открывает
+                                дополнительные возможности в работе со стилями.</p>
+                        </div>
                     </div>
-                    <h3 class="title title_fz14">HTML5</h3>
-                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более
-                        SEO-оптимизированную структуру вашего продукта</p>
                 </div>
+
                 <div class="skills__item">
-                    <div class="skills__item-img">
-                        <img src="icons/skills/html5.svg" alt="html5">
+                    <div class="skills__item__wrapper">
+                        <div class="skills__item__content skills__item__content_active">
+                            <div class="skills__item-img">
+                                <img src="icons/skills/js.svg" alt="js" class="item-img">
+                            </div>
+                        </div>
+                        <div class="skills__item__descr">
+                            <h3 class="title title_fz14">Java Script</h3>
+                            <p>Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки,
+                                вкладки, получение данных от сервера и многое другое</p>
+                        </div>
                     </div>
-                    <h3 class="title title_fz14">HTML5</h3>
-                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более
-                        SEO-оптимизированную структуру вашего продукта</p>
                 </div>
+
                 <div class="skills__item">
-                    <div class="skills__item-img">
-                        <img src="icons/skills/html5.svg" alt="html5">
+                    <div class="skills__item__wrapper">
+                        <div class="skills__item__content skills__item__content_active">
+                            <div class="skills__item-img">
+                                <img src="icons/skills/node.js.svg" alt="node.js" class="item-img">
+                            </div>
+                        </div>
+                        <div class="skills__item__descr">
+                            <h3 class="title title_fz14">Node.js</h3>
+                            <p>Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут
+                                выполнять действия, которые пользователь не видит</p>
+                        </div>
                     </div>
-                    <h3 class="title title_fz14">HTML5</h3>
-                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более
-                        SEO-оптимизированную структуру вашего продукта</p>
                 </div>
+
+                <div class="skills__item">
+                    <div class="skills__item__wrapper">
+                        <div class="skills__item__content skills__item__content_active">
+                            <div class="skills__item-img">
+                                <img src="icons/skills/jquery.svg" alt="jquery" class="item-img">
+                            </div>
+                        </div>
+                        <div class="skills__item__descr">
+                            <h3 class="title title_fz14">Jquery</h3>
+                            <p>Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект
+                                мы её не будем, но навык работы с ней присутствует</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skills__item">
+                    <div class="skills__item__wrapper">
+                        <div class="skills__item__content skills__item__content_active">
+                            <div class="skills__item-img">
+                                <img src="icons/skills/react.svg" alt="react" class="item-img">
+                            </div>
+                        </div>
+                        <div class="skills__item__descr">
+                            <h3 class="title title_fz14">React</h3>
+                            <p>Эта библиотека позволяет создавать web-приложения. Мы можем создать максимально
+                                интерактивный продукт именно под ваши цели</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <div class="skills__ratings">
@@ -389,7 +470,7 @@
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__photo">
-                    <img src="img/main_photo.jpg" alt="photo">
+                    <img src="img/mn.jpg" alt="photo">
                 </div>
                 <div class="contacts__descr">
                     <h2 class="title title_fz16 contacts__title">Контакты</h2>
@@ -414,7 +495,7 @@
                         Или оставьте ваши данные:
                     </div>
 
-                    <form action="#" class="contacts__form">
+                    <form action="smart.php" method="post" class="contacts__form">
                         <div class="contacts__input">
                             <input id="name" type="text" name="name">
                             <label for="name">Ваше имя</label>
@@ -438,6 +519,8 @@
         </div>
     </section>
     <script src="js/script.js"></script>
+    <script src="js/animation.js"></script>
+
 </body>
 
 </html>
