--- a/src/index.html
+++ b/src/index.html
@@ -290,10 +290,13 @@
                             </div>
                         </div>
                         <div class="skills__item__descr">
-                            <h3 class="title title_fz14">HTML5</h3>
-                            <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне
+                            <h3 class="title title_fz16">HTML5</h3>
+                            <div class="skills__item__descr-text">
+                                Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне
                                 создавать более
-                                SEO-оптимизированную структуру вашего продукта</p>
+                                SEO-оптимизированную структуру вашего продукта.
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -306,9 +309,11 @@
                             </div>
                         </div>
                         <div class="skills__item__descr">
-                            <h3 class="title title_fz14">CSS3</h3>
-                            <p>Этот язык стилей позволяет создавать абсолютно любой внешний вид вашего сайта или
-                                приложения. Все ограничивается только вашей фантазией!</p>
+                            <h3 class="title title_fz16">CSS3</h3>
+                            <div class="skills__item__descr-text">
+                                Этот язык стилей позволяет создавать абсолютно любой внешний вид вашего сайта или
+                                приложения. Все ограничивается только вашей фантазией!
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -321,9 +326,11 @@
                             </div>
                         </div>
                         <div class="skills__item__descr">
-                            <h3 class="title title_fz14">Sass/Scss</h3>
-                            <p>Препроцессор CSS придающий мощь и элегантность этому простому языку. Sass открывает
-                                дополнительные возможности в работе со стилями.</p>
+                            <h3 class="title title_fz16">Sass/Scss</h3>
+                            <div class="skills__item__descr-text">
+                                Препроцессор CSS придающий мощь и элегантность этому простому языку. Sass открывает
+                                дополнительные возможности в работе со стилями.
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -336,9 +343,11 @@
                             </div>
                         </div>
                         <div class="skills__item__descr">
-                            <h3 class="title title_fz14">Java Script</h3>
-                            <p>Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки,
-                                вкладки, получение данных от сервера и многое другое</p>
+                            <h3 class="title title_fz16">Java Script</h3>
+                            <div class="skills__item__descr-text">
+                                Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки,
+                                вкладки, получение данных от сервера и многое другое.
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -351,9 +360,11 @@
                             </div>
                         </div>
                         <div class="skills__item__descr">
-                            <h3 class="title title_fz14">Node.js</h3>
-                            <p>Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут
-                                выполнять действия, которые пользователь не видит</p>
+                            <h3 class="title title_fz16">Node.js</h3>
+                            <div class="skills__item__descr-text">
+                                Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут
+                                выполнять действия, которые пользователь не видит.
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -366,9 +377,11 @@
                             </div>
                         </div>
                         <div class="skills__item__descr">
-                            <h3 class="title title_fz14">Jquery</h3>
-                            <p>Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект
-                                мы её не будем, но навык работы с ней присутствует</p>
+                            <h3 class="title title_fz16">Jquery</h3>
+                            <div class="skills__item__descr-text">
+                                Библиотека Jquery позволит ускорить разработку. Без необходимости интегрироваться в
+                                проект не будет.
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -381,9 +394,11 @@
                             </div>
                         </div>
                         <div class="skills__item__descr">
-                            <h3 class="title title_fz14">React</h3>
-                            <p>Эта библиотека позволяет создавать web-приложения. Мы можем создать максимально
-                                интерактивный продукт именно под ваши цели</p>
+                            <h3 class="title title_fz16">React</h3>
+                            <div class="skills__item__descr-text">
+                                Эта библиотека позволяет создавать web-приложения и создать максимально
+                                интерактивный продукт именно под ваши цели.
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -393,42 +408,42 @@
             <div class="skills__ratings">
                 <div class="skills__ratings-item">
                     <div class="title title_fz14 skills__ratings-title">Создание сайтов</div>
-                    <div class="skills__ratings-counter">100%</div>
+                    <div class="skills__ratings-counter">95%</div>
                     <div class="skills__ratings-line">
                         <span></span>
                     </div>
                 </div>
                 <div class="skills__ratings-item">
                     <div class="title title_fz14 skills__ratings-title">Создание приложений</div>
-                    <div class="skills__ratings-counter">85%</div>
+                    <div class="skills__ratings-counter">80%</div>
                     <div class="skills__ratings-line">
                         <span></span>
                     </div>
                 </div>
                 <div class="skills__ratings-item">
                     <div class="title title_fz14 skills__ratings-title">Работа с данными</div>
-                    <div class="skills__ratings-counter">90%</div>
+                    <div class="skills__ratings-counter">70%</div>
                     <div class="skills__ratings-line">
                         <span></span>
                     </div>
                 </div>
                 <div class="skills__ratings-item">
                     <div class="title title_fz14 skills__ratings-title">Креативность</div>
-                    <div class="skills__ratings-counter">75%</div>
+                    <div class="skills__ratings-counter">85%</div>
                     <div class="skills__ratings-line">
                         <span></span>
                     </div>
                 </div>
                 <div class="skills__ratings-item">
                     <div class="title title_fz14 skills__ratings-title">Создание дизайна</div>
-                    <div class="skills__ratings-counter">90%</div>
+                    <div class="skills__ratings-counter">80%</div>
                     <div class="skills__ratings-line">
                         <span></span>
                     </div>
                 </div>
                 <div class="skills__ratings-item">
                     <div class="title title_fz14 skills__ratings-title">Soft skills</div>
-                    <div class="skills__ratings-counter">95%</div>
+                    <div class="skills__ratings-counter">90%</div>
                     <div class="skills__ratings-line">
                         <span></span>
                     </div>
@@ -444,7 +459,7 @@
             <div class="divider"></div>
 
             <div class="portfolio__wrapper">
-                <a href="#" class="portfolio__item">
+                <a href="/uber" class="portfolio__item">
                     <img src="img/works/uber.jpg" alt="uber">
                 </a>
                 <a href="#" class="portfolio__item">
