--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,10 @@
 <body>
 
     <aside class="sidepanel">
-        <a href="#" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="telegram"></a>
-        <a href="#" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
-        <a href="#" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
+        <a href="https://t.me/alheym" class="sidepanel__link"><img src="icons/social/telegram.svg" alt="telegram"></a>
+        <a href="https://www.instagram.com/alheym/" class="sidepanel__link"><img src="icons/social/instagram.svg"
+                alt="instagram"></a>
+        <a href="https://github.com/alheym" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
         <div class="sidepanel__divider"></div>
         <div class="sidepanel__text"><span>Социальные сети</span></div>
     </aside>
@@ -53,24 +54,23 @@
 
             <nav>
                 <ul class="menu__list">
-                    <li class="menu__link"><a href="#">ПРО МЕНЯ</a></li>
-                    <li class="menu__link"><a href="#">МОЙ ОПЫТ</a></li>
-                    <li class="menu__link"><a href="#">МОИ НАВЫКИ</a></li>
-                    <li class="menu__link"><a href="#">МОИ РАБОТЫ</a></li>
-                    <li class="menu__link"><a href="#">ПРАЙС-ЛИСТ</a></li>
-                    <li class="menu__link"><a href="#">КОНТАКТЫ</a></li>
+                    <li class="menu__link"><a href="#about">ПРО МЕНЯ</a></li>
+                    <li class="menu__link"><a href="#resume">МОЙ ОПЫТ</a></li>
+                    <li class="menu__link"><a href="#skills">МОИ НАВЫКИ</a></li>
+                    <li class="menu__link"><a href="#portfolio">МОИ РАБОТЫ</a></li>
+                    <li class="menu__link"><a href="#contacts">КОНТАКТЫ</a></li>
                 </ul>
             </nav>
 
             <div class="menu__social">
-                <a href="#">
+                <a href="https://github.com/alheym">
                     <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M10 0C4.475 0 0 4.36167 0 9.74107C0 14.0457 2.865 17.6962 6.8375 18.9832C7.3375 19.0749 7.52083 18.7734 7.52083 18.5148C7.52083 18.2835 7.5125 17.6706 7.50833 16.8585C4.72667 17.4459 4.14 15.5517 4.14 15.5517C3.685 14.4274 3.0275 14.1267 3.0275 14.1267C2.12167 13.5228 3.0975 13.5352 3.0975 13.5352C4.10167 13.603 4.62917 14.5389 4.62917 14.5389C5.52083 16.0283 6.97 15.5979 7.54167 15.3493C7.63167 14.719 7.88917 14.2903 8.175 14.0466C5.95417 13.8029 3.62 12.9652 3.62 9.23304C3.62 8.16988 4.0075 7.30085 4.64917 6.61934C4.53667 6.37317 4.19917 5.3827 4.73667 4.04116C4.73667 4.04116 5.57417 3.78012 7.48667 5.03988C8.28667 4.82345 9.13667 4.71606 9.98667 4.7111C10.8367 4.71606 11.6867 4.82345 12.4867 5.03988C14.3867 3.78012 15.2242 4.04116 15.2242 4.04116C15.7617 5.3827 15.4242 6.37317 15.3242 6.61934C15.9617 7.30085 16.3492 8.16988 16.3492 9.23304C16.3492 12.9752 14.0117 13.7987 11.7867 14.0383C12.1367 14.3307 12.4617 14.928 12.4617 15.8408C12.4617 17.1444 12.4492 18.1918 12.4492 18.5082C12.4492 18.7635 12.6242 19.0683 13.1367 18.9708C17.1375 17.692 20 14.0391 20 9.74107C20 4.36167 15.5225 0 10 0Z"
                             fill="#212121" />
                     </svg>
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/alheym/">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M13.7495 0L6.24951 0C2.79826 0 -0.000488281 2.79875 -0.000488281 6.25L-0.000488281 13.75C-0.000488281 17.2013 2.79826 20 6.24951 20L13.7495 20C17.2008 20 19.9995 17.2013 19.9995 13.75L19.9995 6.25C19.9995 2.79875 17.2008 0 13.7495 0ZM18.1245 13.75C18.1245 16.1625 16.162 18.125 13.7495 18.125L6.24951 18.125C3.83701 18.125 1.87451 16.1625 1.87451 13.75L1.87451 6.25C1.87451 3.8375 3.83701 1.875 6.24951 1.875L13.7495 1.875C16.162 1.875 18.1245 3.8375 18.1245 6.25L18.1245 13.75Z"
@@ -83,10 +83,10 @@
                             fill="black" />
                     </svg>
                 </a>
-                <a href="#">
-                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <a href="https://t.me/alheym">
+                    <svg width="20" height="20" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
-                            d="M17.0698 0L2.9292 0C1.3139 0 -0.000488281 1.31439 -0.000488281 2.92969L-0.000488281 17.0703C-0.000488281 18.6856 1.3139 20 2.9292 20L8.82764 20L8.82764 12.9297L6.48389 12.9297L6.48389 9.41406L8.82764 9.41406L8.82764 7.03125C8.82764 5.09262 10.4046 3.51563 12.3433 3.51563L15.8979 3.51563L15.8979 7.03125L12.3433 7.03125L12.3433 9.41406L15.8979 9.41406L15.312 12.9297L12.3433 12.9297L12.3433 20L17.0698 20C18.6851 20 19.9995 18.6856 19.9995 17.0703L19.9995 2.92969C19.9995 1.31439 18.6851 0 17.0698 0Z"
+                            d="M15 30C23.2863 30 30 23.2863 30 15C30 6.71375 23.2863 0 15 0C6.71375 0 0 6.71375 0 15C0 23.2863 6.71375 30 15 30ZM6.86375 14.675L21.3263 9.09875C21.9975 8.85625 22.5837 9.2625 22.3662 10.2775L22.3675 10.2762L19.905 21.8775C19.7225 22.7 19.2337 22.9 18.55 22.5125L14.8 19.7487L12.9912 21.4913C12.7912 21.6913 12.6225 21.86 12.235 21.86L12.5013 18.0438L19.4513 11.765C19.7537 11.4987 19.3837 11.3488 18.985 11.6138L10.3963 17.0212L6.69375 15.8663C5.89 15.6112 5.8725 15.0625 6.86375 14.675Z"
                             fill="black" />
                     </svg>
                 </a>
@@ -110,10 +110,10 @@
             <div class="container">
                 <div id="text-canvas">
                     <div class="title title_fz20 promo__subtitle">Меня зовут Анастасия</div>
-                    <h1 class="title title_fz50 promo__title">Я frontend разработчик</h1>
+                    <h1 class="title title_fz55 promo__title">Я frontend-разработчик</h1>
                     <div class="promo__btns">
-                        <a href="#" class="promo__link btn">Портфолио</a>
-                        <a href="#" class="promo__link">Про меня</a>
+                        <a href="#portfolio" class="promo__link btn">Портфолио</a>
+                        <a href="#about" class="promo__link">Про меня</a>
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
     </section>
 
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
 
             <div class="about__wrapper">
@@ -135,11 +135,13 @@
                     <h2 class="title title_fz16 about__title">Про меня</h2>
                     <div class="title title_fz36 about__subtitle">Меня зовут Анастасия</div>
                     <div class="divider"></div>
-                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    <p class="about__text">Я frontend-разработчик из России и я люблю создавать удивительные вещи с
+                        помощью веб-технологий.
+                        <br>Мне нравится решать проблемы дизайна, реализовывать интуитивно понятный и динамичный
+                        пользовательсикй интерфейс.
+                        Так же я занимаюсь разработкой веб-приложений и постоянно совершенствую свои навыки.
+                        <br>Созданные мной проекты будут работать на любом устройстве, большом или маленьком.
+
                     </p>
                 </div>
                 <div class="about__skills">
@@ -148,12 +150,12 @@
                             <img src="icons/about_me/web_development.svg" alt="web-dev">
                         </div>
                         <div>
-                            <div class="title title_fz14">
+                            <div class="title title_fz16">
                                 Web-разработка
                             </div>
                             <div class="about__skills-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua.
+                                Создание сайтов или веб-приложений отвечающих любым смелым идеям
+
                             </div>
                         </div>
                     </div>
@@ -162,12 +164,11 @@
                             <img src="icons/about_me/mobile_dev.svg" alt="mobile-dev">
                         </div>
                         <div>
-                            <div class="title title_fz14">
+                            <div class="title title_fz16">
                                 Разработка приложений
                             </div>
                             <div class="about__skills-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua.
+                                Создание приложений адаптированных под мобильные устройства и любые задачи
                             </div>
                         </div>
                     </div>
@@ -176,12 +177,11 @@
                             <img src="icons/about_me/design.svg" alt="design">
                         </div>
                         <div>
-                            <div class="title title_fz14">
+                            <div class="title title_fz16">
                                 UI/UX Design
                             </div>
                             <div class="about__skills-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua.
+                                Разработка простого в использовании, интуитивно понятного пользовательского интерфейса
                             </div>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
         </div>
     </section>
 
-    <section class="resume">
+    <section class="resume" id="resume">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Опыт</h2>
             <div class="title title_fz36 title__section-subtitle">Чем я буду полезна</div>
@@ -274,7 +274,7 @@
         </div>
     </section>
 
-    <section class="skills">
+    <section class="skills" id="skills">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Навыки</h2>
             <div class="title title_fz36 title__section-subtitle">Что я использую в работе</div>
@@ -452,7 +452,7 @@
         </div>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Портфолио</h2>
             <div class="title title_fz36 title__section-subtitle">Мои работы</div>
@@ -460,7 +460,7 @@
 
             <div class="portfolio__wrapper">
                 <a href="/uber" class="portfolio__item">
-                    <img src="img/works/uber.jpg" alt="uber">
+                    <img src="img/works/uber.jpg" alt="uber" class="portfolio__item-img">
                 </a>
                 <a href="#" class="portfolio__item">
                     <img src="img/works/pulse.jpg" alt="puls">
@@ -481,7 +481,7 @@
         </div>
     </section>
 
-    <section class="contacts">
+    <section class="contacts" id="contacts">
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__photo">
@@ -496,13 +496,13 @@
                         Любым удобным для вас способом:
                     </div>
                     <div class="contacts__social">
-                        <a href="#" class="contacts__link">
-                            <img src="icons/social/facebook_straight.svg" alt="facebook">
+                        <a href="mailto:alheym.mw@gmail.com" class="contacts__link">
+                            <img src="icons/social/gmail.svg" alt="gmail">
                         </a>
-                        <a href="#" class="contacts__link">
-                            <img src="icons/social/telegram.svg" alt="telegram">
+                        <a href="https://t.me/alheym" class="contacts__link">
+                            <img src="icons/social/telegram_straight.svg" alt="telegram">
                         </a>
-                        <a href="#" class="contacts__link">
+                        <a href="https://www.instagram.com/alheym" class="contacts__link">
                             <img src="icons/social/instagram_straight.svg" alt="instagram">
                         </a>
                     </div>
