--- a/src/index.html
+++ b/src/index.html
@@ -117,17 +117,18 @@
                     </div>
                 </div>
             </div>
-
+        </div>
     </section>
-
 
     <section class="about" id="about">
         <div class="container">
-
             <div class="about__wrapper">
 
                 <div class="about__photo">
-                    <img src="img/mn.jpg" alt="photo">
+                    <!-- <img src="img/mn.jpg" alt="photo"> -->
+                    <div id="about-canvas">
+                        <canvas id="ab-canvas"></canvas>
+                    </div>
 
                 </div>
 
@@ -485,7 +486,10 @@
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__photo">
-                    <img src="img/mn.jpg" alt="photo">
+                    <div id="contacts-canvas">
+                        <canvas id="co-canvas"></canvas>
+                    </div>
+                    <!-- <img src="img/mn.jpg" alt="photo"> -->
                 </div>
                 <div class="contacts__descr">
                     <h2 class="title title_fz16 contacts__title">Контакты</h2>
@@ -535,6 +539,8 @@
     </section>
     <script src="js/script.js"></script>
     <script src="js/animation.js"></script>
+    <script src="js/about.js"></script>
+    <script src="js/contacts.js"></script>
 
 </body>
 
