--- a/src/index.html
+++ b/src/index.html
@@ -210,9 +210,8 @@
                                     <div class="resume__item-location">Диплом бакалавра | Томск (2015-2019)</div>
                                 </div>
                                 <div class="resume__item-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Диплом бакалавра по направлению «Информатика и вычислительная техника», 
+                                    специальность «Системы автоматизированного проектирования»
                                 </div>
                             </div>
                         </li>
@@ -226,9 +225,8 @@
                                     <div class="resume__item-location">Диплом магистра | Томск (2019-2021)</div>
                                 </div>
                                 <div class="resume__item-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Диплом бакалавра по направлению «Информатика и вычислительная техника», 
+                                    специальность «Информационное обеспечение аппаратно-программных комплексов»
                                 </div>
                             </div>
                         </li>
@@ -243,29 +241,11 @@
                                     <div class="resume__item-icon">
                                         <img src="icons/experience/university.svg" alt="university">
                                     </div>
-                                    <h4 class="title title_fz14">ТУСУР</h4>
-                                    <div class="resume__item-location">Диплом магистра | Томск (2019-2021)</div>
+                                    <h4 class="title title_fz14">Фриланс</h4>
+                                    <div class="resume__item-location">проектная занятость</div>
                                 </div>
                                 <div class="resume__item-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="resume__item">
-                                <div class="resume__item-head">
-                                    <div class="resume__item-icon">
-                                        <img src="icons/experience/university.svg" alt="university">
-                                    </div>
-                                    <h4 class="title title_fz14">ТУСУР</h4>
-                                    <div class="resume__item-location">Диплом магистра | Томск (2019-2021)</div>
-                                </div>
-                                <div class="resume__item-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Работа над проектами полученными напрямую от заказчиков
                                 </div>
                             </div>
                         </li>
@@ -463,11 +443,11 @@
                 <a href="/uber" class="portfolio__item">
                     <img src="img/works/uber.jpg" alt="uber" class="portfolio__item-img">
                 </a>
-                <a href="#" class="portfolio__item">
-                    <img src="img/works/pulse.jpg" alt="puls">
+                <a href="/pulse" class="portfolio__item">
+                    <img src="img/works/pulse.jpg" alt="puls" class="portfolio__item-img">
                 </a>
-                <a href="#" class="portfolio__item">
-                    <img src="img/works/bread.jpg" alt="test">
+                <a href="/food" class="portfolio__item">
+                    <img src="img/works/bread.jpg" alt="food" class="portfolio__item-img">
                 </a>
                 <a href="#" class="portfolio__item vertical">
                     <img src="img/works/plans.jpg" alt="test">
