--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,7 @@
                                     <div class="resume__item-location">Диплом бакалавра | Томск (2015-2019)</div>
                                 </div>
                                 <div class="resume__item-body">
-                                    Диплом бакалавра по направлению «Информатика и вычислительная техника», 
+                                    Диплом бакалавра по направлению «Информатика и вычислительная техника»,
                                     специальность «Системы автоматизированного проектирования»
                                 </div>
                             </div>
@@ -225,7 +225,7 @@
                                     <div class="resume__item-location">Диплом магистра | Томск (2019-2021)</div>
                                 </div>
                                 <div class="resume__item-body">
-                                    Диплом бакалавра по направлению «Информатика и вычислительная техника», 
+                                    Диплом бакалавра по направлению «Информатика и вычислительная техника»,
                                     специальность «Информационное обеспечение аппаратно-программных комплексов»
                                 </div>
                             </div>
@@ -511,6 +511,11 @@
                         <div>
                             <button class="contacts__btn btn btn__submit">Отправить сообщение</button>
                         </div>
+                        <div class="contacts__policy">
+                            <input required type="checkbox">
+                            <span>Я согласен(а) с <a href="/policy.html">политикой конфиденциальности</a></span>
+                        </div>
+
                     </form>
                 </div>
 
